objects/Client__c.object
<CustomObject>
   <fields>
      <fullName>Client_Name__c</fullName>
      <label>Client Name</label>
      <length>20</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>Ext_ID__c</fullName>
      <displayFormat>{0}</displayFormat>
      <externalId>true</externalId>
      <label>Ext ID</label>
      <type>AutoNumber</type>
   </fields>
   <fields>
      <fullName>External_TXT__c</fullName>
      <externalId>true</externalId>
      <label>External TXT</label>
      <length>5</length>
      <type>Text</type>
      <unique>true</unique>
   </fields>
   <fields>
      <fullName>Location__c</fullName>
      <label>Location</label>
      <type>Picklist</type>
      <valueSet>
         <restricted>true</restricted>
         <valueSetDefinition>
            <value>
               <fullName>Western Europe</fullName>
            </value>
            <value>
               <fullName>Central and Eastern Europe</fullName>
            </value>
            <value>
               <fullName>Asia</fullName>
            </value>
            <value>
               <fullName>Africa</fullName>
            </value>
            <value>
               <fullName>Mediterranean &amp; Middle East</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>New_Ext__c</fullName>
      <externalId>true</externalId>
      <label>New Ext</label>
      <length>30</length>
      <type>Text</type>
      <unique>true</unique>
   </fields>
   <label>Client</label>
   <listViews>
      <fullName>All</fullName>
      <columns>NAME</columns>
      <columns>Client_Name__c</columns>
      <columns>Location__c</columns>
      <columns>External_TXT__c</columns>
      <columns>New_Ext__c</columns>
      <filterScope>Everything</filterScope>
      <label>All</label>
   </listViews>
   <nameField>
      <displayFormat>CID-{MM}#{0}</displayFormat>
      <label>Client ID</label>
      <type>AutoNumber</type>
   </nameField>
   <pluralLabel>Clients</pluralLabel>
   <recordTypes>
      <fullName>Global_Ecosystem</fullName>
      <active>true</active>
      <label>Global Innovation Ecosystem</label>
   </recordTypes>
   <sharingModel>ReadWrite</sharingModel>
   <validationRules>
      <fullName>Client_Name</fullName>
      <active>true</active>
      <description>Client Name Length Should Be More Than 4</description>
      <errorConditionFormula>LEN(Client_Name__c) &lt; 5</errorConditionFormula>
      <errorMessage>Enter Valid Client Name</errorMessage>
   </validationRules>
</CustomObject>